[tool.poetry]
name = "bitcoingenerator"
version = "0.1.0"
description = ""
authors = ["Ihor Samartsev <isamarcev1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitcoinlib = "^0.6.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
